--- a/sboot-basics-API/src/main/resources/application.properties
+++ b/sboot-basics-API/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 
 server.port=3693
 
+welcome.message = Jogopi!!
+
+
+
+
 spring.datasource.url=jdbc:mysql://localhost/basicspringbootAPI?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
 
 spring.datasource.username=root
@@ -11,6 +16,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+
 
 
 
