--- a/sboot-basics-API/src/main/resources/application.properties
+++ b/sboot-basics-API/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=3693
 
 welcome.message = Jogopi!!
 
-
-
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=env,beans
 
 spring.datasource.url=jdbc:mysql://localhost/basicspringbootAPI?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
 
@@ -19,7 +19,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 
-
+#
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:dcbapp
 #spring.datasource.driver-class-name=org.h2.Driver
