WebSecurity configuration WEAKKKK

--- a/spring-security-tutorial/spring-security-client/src/main/resources/application.yml
+++ b/spring-security-tutorial/spring-security-client/src/main/resources/application.yml
@@ -38,4 +38,4 @@ spring:
             client-name: api-client-authorization-code
         provider:
           spring:
-            issuer-uri: http://auth-server:9000
+            issuer-uri: http://127.0.0.1:9000
